--- a/complain-us.html
+++ b/complain-us.html
@@ -391,125 +391,199 @@
 
     <hr class="footer-divider">
 
-     <!-- Copyright -->
-          <div class="row">
-            <div class="col text-center">
-              <p class="mb-0">
-                © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                Design & Developed by
-                
-              </p>
-               <div class="social-icons">
-               <a href="https://www.instagram.com/kumiradi.infotech" target="_blank">
-               <img src="img/instagram.jpg" alt="Instagram">
-                </a>
-               <a href="https://www.facebook.com/yourusername" target="_blank">
-               <img src="img/facebook.jpg" alt="Facebook">
-               </a>
-               <a href="https://www.youtube.com/@kumiradiinfotech" target="_blank">
-               <img src="img/youtube.jpg" alt="YouTube">
-               </a>
-               </div>
+<!-- Copyright -->
+            <div class="row">
+              <div class="col text-center">
+                <p class="mb-0">
+                  © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
+                  Design & Developed 
+                  
 
-  </div>
-</footer>
+                <!-- </p>
+                <div class="social-img">
+                  <a href="https://www.instagram.com/kumiradi.infotech" target="_blank">
+                    <img src="img/instagram.jpg" alt="Instagram">
+                  </a>
+                  <a href="https://www.facebook.com/yourusername" target="_blank">
+                    <img src="img/facebook.jpg" alt="Facebook">
+                  </a>
+                  <a href="https://www.youtube.com/@kumiradiinfotech" target="_blank">
+                    <img src="img/youtube.jpg" alt="YouTube">
+                  </a>
+                </div> -->
+                <!-- Horizontal line below the link -->
+                <hr style="
+                  border: 1px solid rgba(255, 255, 255, 0.3);
+                  width: 80%;
+                  margin: 10px auto;
+                " />
+              </div>
+            </div>
+          </div>
+        </footer>
 
-      <!-- GIGW Compliance Button -->
-      <div class="gigw-compliance" id="gigwButton">
-        <i class="fas fa-universal-access"></i>
+        <!-- GIGW Compliance Button -->
+        <div class="gigw-compliance0" id="gigwButton">
+          <i class="fas fa-universal-access"></i>
+        </div>
+
+        <!-- Accessibility Panel -->
+        <div class="accessibility-panel" id="accessibilityPanel">
+          <button id="increaseText">
+            <i class="fas fa-text-height"></i> Increase Text Size
+          </button>
+          <button id="decreaseText">
+            <i class="fas fa-text-height"></i> Decrease Text Size
+          </button>
+          <button id="resetText">
+            <i class="fas fa-undo"></i> Reset Text Size
+          </button>
+          <button id="toggleDarkMode">
+            <i class="fas fa-moon"></i> Toggle Dark Mode
+          </button>
+          <button id="readAloud">
+            <i class="fas fa-volume-up"></i> Read Aloud
+          </button>
+          <button id="stopReading">
+            <i class="fas fa-stop"></i> Stop Reading
+          </button>
+        </div>
       </div>
 
-      <!-- Accessibility Panel -->
-      <div class="accessibility-panel" id="accessibilityPanel">
-        <button id="increaseText">
-          <i class="fas fa-text-height"></i> Increase Text Size
-        </button>
-        <button id="decreaseText">
-          <i class="fas fa-text-height"></i> Decrease Text Size
-        </button>
-        <button id="resetText">
-          <i class="fas fa-undo"></i> Reset Text Size
-        </button>
-        <button id="toggleDarkMode">
-          <i class="fas fa-moon"></i> Toggle Dark Mode
-        </button>
-        <button id="readAloud">
-          <i class="fas fa-volume-up"></i> Read Aloud
-        </button>
-        <button id="stopReading">
-          <i class="fas fa-stop"></i> Stop Reading
-        </button>
-      </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Visitor Counter
-      function updateVisitorCounter() {
-        if (localStorage.getItem("visits")) {
-          let visits = parseInt(localStorage.getItem("visits")) + 1;
-          localStorage.setItem("visits", visits);
-          document.getElementById("visitorCounter").innerText = visits;
-        } else {
-          localStorage.setItem("visits", 1);
-          document.getElementById("visitorCounter").innerText = 1;
-        }
-      }
-
-      // Generate CAPTCHA
-      function generateCaptcha() {
-        const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-        let captcha = "";
-        for (let i = 0; i < 5; i++) {
-          captcha += characters.charAt(
-            Math.floor(Math.random() * characters.length)
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script>
+        // ---------------- Google Translator ----------------
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement(
+            {
+              pageLanguage: "mr",
+              includedLanguages: "mr,en,hi",
+              layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+            },
+            "google_translate_element"
           );
         }
-        document.getElementById("captchaText").textContent = captcha;
-        return captcha;
-      }
 
-      // Form Validation
-      function setupFormValidation() {
-        let currentCaptcha = generateCaptcha();
+        // ---------------- Visitor Counter ----------------
+        function updateVisitorCounter() {
+          if (localStorage.getItem("visits")) {
+            let visits = parseInt(localStorage.getItem("visits")) + 1;
+            localStorage.setItem("visits", visits);
+            document.getElementById("visitorCounter").innerText = visits;
+          } else {
+            localStorage.setItem("visits", 1);
+            document.getElementById("visitorCounter").innerText = 1;
+          }
+        }
+        document.addEventListener("DOMContentLoaded", updateVisitorCounter);
 
-        // Refresh CAPTCHA
-        document
-          .getElementById("refreshCaptcha")
-          .addEventListener("click", function () {
-            currentCaptcha = generateCaptcha();
-            document.getElementById("captchaInput").value = "";
+        // ---------------- Counter Animation ----------------
+        function animateCounters() {
+          const counters = document.querySelectorAll(".counter");
+          const duration = 2500;
+          const interval = 50;
+
+          counters.forEach((counter) => {
+            const target = +counter.getAttribute("data-target");
+            const steps = duration / interval;
+            const increment = target / steps;
+            let current = 0;
+
+            const timer = setInterval(() => {
+              current += increment;
+              if (current >= target) {
+                counter.innerText = target;
+                clearInterval(timer);
+              } else {
+                counter.innerText = Math.floor(current);
+              }
+            }, interval);
+          });
+        }
+        document.addEventListener("DOMContentLoaded", animateCounters);
+
+        // ---------------- Gallery Modal ----------------
+        document.addEventListener("DOMContentLoaded", function () {
+          const galleryImages = document.querySelectorAll(".gallery-img");
+          const modalImage = document.getElementById("modalImage");
+          const modalCaption = document.getElementById("modalCaption");
+          const imageModal = new bootstrap.Modal(
+            document.getElementById("imageModal")
+          );
+
+          galleryImages.forEach((image) => {
+            image.addEventListener("click", function () {
+              modalImage.src = this.src;
+              modalCaption.innerText = this.dataset.caption;
+              imageModal.show();
+            });
           });
 
-        // Form Submission
+          // ---------------- See More Button ----------------
+          const seeMoreBtn = document.getElementById("seeMoreBtn");
+          const moreImages = document.getElementById("moreImages");
+
+          if (seeMoreBtn && moreImages) {
+            seeMoreBtn.addEventListener("click", () => {
+              if (moreImages.classList.contains("d-none")) {
+                moreImages.classList.remove("d-none");
+                seeMoreBtn.innerText = "See Less";
+              } else {
+                moreImages.classList.add("d-none");
+                seeMoreBtn.innerText = "See More";
+              }
+            });
+          }
+        });
+
+        // ---------------- Accessibility Panel ----------------
+        const gigwButton = document.getElementById("gigwButton");
+        const accessibilityPanel = document.getElementById("accessibilityPanel");
+
+        gigwButton.addEventListener("click", () => {
+          accessibilityPanel.classList.toggle("active");
+        });
+
+        let currentSize = 100;
+
+        document.getElementById("increaseText").addEventListener("click", () => {
+          currentSize += 10;
+          document.body.style.fontSize = currentSize + "%";
+        });
+
+        document.getElementById("decreaseText").addEventListener("click", () => {
+          currentSize -= 10;
+          document.body.style.fontSize = currentSize + "%";
+        });
+
+        document.getElementById("resetText").addEventListener("click", () => {
+          currentSize = 100;
+          document.body.style.fontSize = "100%";
+        });
+
         document
-          .getElementById("complainForm")
-          .addEventListener("submit", function (e) {
-            e.preventDefault();
-
-            // Validate CAPTCHA
-            const userInput = document.getElementById("captchaInput").value;
-            if (userInput.toUpperCase() !== currentCaptcha) {
-              alert("कॅप्चा कोड अयोग्य आहे. कृपया पुन्हा प्रयत्न करा.");
-              currentCaptcha = generateCaptcha();
-              document.getElementById("captchaInput").value = "";
-              return;
-            }
-
-            // If validation passes
-            alert(
-              "आपली तक्रार यशस्वीरित्या पाठवण्यात आली आहे. आम्ही लवकरच आपल्याशी संपर्क साधू."
-            );
-            this.reset();
-            currentCaptcha = generateCaptcha();
+          .getElementById("toggleDarkMode")
+          .addEventListener("click", () => {
+            document.body.classList.toggle("dark-mode");
           });
-      }
 
-      // Initialize on page load
-      window.onload = function () {
-        updateVisitorCounter();
-        setupFormValidation();
-      };
-    </script>
-  </body>
+        // ---------------- Text-to-Speech ----------------
+        let synth = window.speechSynthesis;
+        let utterance;
+
+        document.getElementById("readAloud").addEventListener("click", () => {
+          let text = document.body.innerText;
+          if (synth.speaking) synth.cancel();
+          utterance = new SpeechSynthesisUtterance(text);
+          synth.speak(utterance);
+        });
+
+        document.getElementById("stopReading").addEventListener("click", () => {
+          if (synth.speaking) synth.cancel();
+        });
+      </script>
+
+      <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+
 </html>
