--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <title>Wadegaon Station Gram Panchayat</title>
   <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!---->
   
-
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="index.css" />
@@ -656,7 +652,7 @@
               <div class="col text-center">
                 <p class="mb-0">
                   © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                  Design & Developed by
+                  Design & Developed 
                   
 
                 <!-- </p>
