--- a/sc_st_development.html
+++ b/sc_st_development.html
@@ -360,89 +360,198 @@
     </div>
 
       <!-- Copyright -->
-          <div class="row">
-            <div class="col text-center">
-              <p class="mb-0">
-                © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                Design & Developed by
-                
-              </p>
-               <div class="social-icons">
-               <a href="https://www.instagram.com/kumiradi.infotech" target="_blank">
-               <img src="img/instagram.jpg" alt="Instagram">
-                </a>
-               <a href="https://www.facebook.com/yourusername" target="_blank">
-               <img src="img/facebook.jpg" alt="Facebook">
-               </a>
-               <a href="https://www.youtube.com/@kumiradiinfotech" target="_blank">
-               <img src="img/youtube.jpg" alt="YouTube">
-               </a>
-               </div>
+            <div class="row">
+              <div class="col text-center">
+                <p class="mb-0">
+                  © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
+                  Design & Developed 
+                  
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Visitor Counter
-      function updateVisitorCounter() {
-        if (localStorage.getItem("visits")) {
-          let visits = parseInt(localStorage.getItem("visits")) + 1;
-          localStorage.setItem("visits", visits);
-          document.getElementById("visitorCounter").innerText = visits;
-        } else {
-          localStorage.setsetItem("visits", 1);
-          document.getElementById("visitorCounter").innerText = 1;
+                <!-- </p>
+                <div class="social-img">
+                  <a href="https://www.instagram.com/kumiradi.infotech" target="_blank">
+                    <img src="img/instagram.jpg" alt="Instagram">
+                  </a>
+                  <a href="https://www.facebook.com/yourusername" target="_blank">
+                    <img src="img/facebook.jpg" alt="Facebook">
+                  </a>
+                  <a href="https://www.youtube.com/@kumiradiinfotech" target="_blank">
+                    <img src="img/youtube.jpg" alt="YouTube">
+                  </a>
+                </div> -->
+                <!-- Horizontal line below the link -->
+                <hr style="
+                  border: 1px solid rgba(255, 255, 255, 0.3);
+                  width: 80%;
+                  margin: 10px auto;
+                " />
+              </div>
+            </div>
+          </div>
+        </footer>
+
+        <!-- GIGW Compliance Button -->
+        <div class="gigw-compliance0" id="gigwButton">
+          <i class="fas fa-universal-access"></i>
+        </div>
+
+        <!-- Accessibility Panel -->
+        <div class="accessibility-panel" id="accessibilityPanel">
+          <button id="increaseText">
+            <i class="fas fa-text-height"></i> Increase Text Size
+          </button>
+          <button id="decreaseText">
+            <i class="fas fa-text-height"></i> Decrease Text Size
+          </button>
+          <button id="resetText">
+            <i class="fas fa-undo"></i> Reset Text Size
+          </button>
+          <button id="toggleDarkMode">
+            <i class="fas fa-moon"></i> Toggle Dark Mode
+          </button>
+          <button id="readAloud">
+            <i class="fas fa-volume-up"></i> Read Aloud
+          </button>
+          <button id="stopReading">
+            <i class="fas fa-stop"></i> Stop Reading
+          </button>
+        </div>
+      </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script>
+        // ---------------- Google Translator ----------------
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement(
+            {
+              pageLanguage: "mr",
+              includedLanguages: "mr,en,hi",
+              layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+            },
+            "google_translate_element"
+          );
         }
-      }
 
-      // Word Rotator
-      function initWordRotator() {
-        const words = document.querySelectorAll(".word-rotator-words b");
-        let currentIndex = 0;
-
-        function rotateWords() {
-          // Hide current word
-          words[currentIndex].classList.remove("is-visible");
-          words[currentIndex].classList.add("is-hidden");
-
-          // Move to next word
-          currentIndex = (currentIndex + 1) % words.length;
-
-          // Show next word
-          words[currentIndex].classList.remove("is-hidden");
-          words[currentIndex].classList.add("is-visible");
-
-          // Adjust width of container
-          const container = document.querySelector(".word-rotator-words");
-          container.style.width = words[currentIndex].offsetWidth + "px";
+        // ---------------- Visitor Counter ----------------
+        function updateVisitorCounter() {
+          if (localStorage.getItem("visits")) {
+            let visits = parseInt(localStorage.getItem("visits")) + 1;
+            localStorage.setItem("visits", visits);
+            document.getElementById("visitorCounter").innerText = visits;
+          } else {
+            localStorage.setItem("visits", 1);
+            document.getElementById("visitorCounter").innerText = 1;
+          }
         }
+        document.addEventListener("DOMContentLoaded", updateVisitorCounter);
 
-        // Initial adjustment
-        if (words.length > 0) {
-          const container = document.querySelector(".word-rotator-words");
-          container.style.width = words[0].offsetWidth + "px";
+        // ---------------- Counter Animation ----------------
+        function animateCounters() {
+          const counters = document.querySelectorAll(".counter");
+          const duration = 2500;
+          const interval = 50;
 
-          // Start rotation
-          setInterval(rotateWords, 3000);
-        }
-      }
+          counters.forEach((counter) => {
+            const target = +counter.getAttribute("data-target");
+            const steps = duration / interval;
+            const increment = target / steps;
+            let current = 0;
 
-      // Initialize on page load
-      window.onload = function () {
-        updateVisitorCounter();
-        initWordRotator();
-
-        // Add rotation to chevron icons when collapsing
-        document.querySelectorAll(".collapse-header").forEach((header) => {
-          header.addEventListener("click", function () {
-            const icon = this.querySelector(
-              "i.fa-chevron-down, i.fa-chevron-up"
-            );
-            if (icon) {
-              icon.classList.toggle("fa-chevron-down");
-              icon.classList.toggle("fa-chevron-up");
-            }
+            const timer = setInterval(() => {
+              current += increment;
+              if (current >= target) {
+                counter.innerText = target;
+                clearInterval(timer);
+              } else {
+                counter.innerText = Math.floor(current);
+              }
+            }, interval);
           });
+        }
+        document.addEventListener("DOMContentLoaded", animateCounters);
+
+        // ---------------- Gallery Modal ----------------
+        document.addEventListener("DOMContentLoaded", function () {
+          const galleryImages = document.querySelectorAll(".gallery-img");
+          const modalImage = document.getElementById("modalImage");
+          const modalCaption = document.getElementById("modalCaption");
+          const imageModal = new bootstrap.Modal(
+            document.getElementById("imageModal")
+          );
+
+          galleryImages.forEach((image) => {
+            image.addEventListener("click", function () {
+              modalImage.src = this.src;
+              modalCaption.innerText = this.dataset.caption;
+              imageModal.show();
+            });
+          });
+
+          // ---------------- See More Button ----------------
+          const seeMoreBtn = document.getElementById("seeMoreBtn");
+          const moreImages = document.getElementById("moreImages");
+
+          if (seeMoreBtn && moreImages) {
+            seeMoreBtn.addEventListener("click", () => {
+              if (moreImages.classList.contains("d-none")) {
+                moreImages.classList.remove("d-none");
+                seeMoreBtn.innerText = "See Less";
+              } else {
+                moreImages.classList.add("d-none");
+                seeMoreBtn.innerText = "See More";
+              }
+            });
+          }
         });
-      };
-    </script>
-  </body>
+
+        // ---------------- Accessibility Panel ----------------
+        const gigwButton = document.getElementById("gigwButton");
+        const accessibilityPanel = document.getElementById("accessibilityPanel");
+
+        gigwButton.addEventListener("click", () => {
+          accessibilityPanel.classList.toggle("active");
+        });
+
+        let currentSize = 100;
+
+        document.getElementById("increaseText").addEventListener("click", () => {
+          currentSize += 10;
+          document.body.style.fontSize = currentSize + "%";
+        });
+
+        document.getElementById("decreaseText").addEventListener("click", () => {
+          currentSize -= 10;
+          document.body.style.fontSize = currentSize + "%";
+        });
+
+        document.getElementById("resetText").addEventListener("click", () => {
+          currentSize = 100;
+          document.body.style.fontSize = "100%";
+        });
+
+        document
+          .getElementById("toggleDarkMode")
+          .addEventListener("click", () => {
+            document.body.classList.toggle("dark-mode");
+          });
+
+        // ---------------- Text-to-Speech ----------------
+        let synth = window.speechSynthesis;
+        let utterance;
+
+        document.getElementById("readAloud").addEventListener("click", () => {
+          let text = document.body.innerText;
+          if (synth.speaking) synth.cancel();
+          utterance = new SpeechSynthesisUtterance(text);
+          synth.speak(utterance);
+        });
+
+        document.getElementById("stopReading").addEventListener("click", () => {
+          if (synth.speaking) synth.cancel();
+        });
+      </script>
+
+      <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+
 </html>
