--- a/villageinfo.html
+++ b/villageinfo.html
@@ -548,180 +548,199 @@
 
     <hr class="footer-divider">
 
-       <!-- Copyright -->
-          <div class="row">
-            <div class="col text-center">
-              <p class="mb-0">
-                © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                Design & Developed by
-               
-    <!-- Horizontal line below the link -->
-    <hr style="border: 1px solid rgba(255, 255, 255, 0.3); width: 80%; margin: 10px auto;">
-  </div>
-</div>
+      <!-- Copyright -->
+            <div class="row">
+              <div class="col text-center">
+                <p class="mb-0">
+                  © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
+                  Design & Developed 
+                  
 
-  </div>
-</footer>
+                <!-- </p>
+                <div class="social-img">
+                  <a href="https://www.instagram.com/kumiradi.infotech" target="_blank">
+                    <img src="img/instagram.jpg" alt="Instagram">
+                  </a>
+                  <a href="https://www.facebook.com/yourusername" target="_blank">
+                    <img src="img/facebook.jpg" alt="Facebook">
+                  </a>
+                  <a href="https://www.youtube.com/@kumiradiinfotech" target="_blank">
+                    <img src="img/youtube.jpg" alt="YouTube">
+                  </a>
+                </div> -->
+                <!-- Horizontal line below the link -->
+                <hr style="
+                  border: 1px solid rgba(255, 255, 255, 0.3);
+                  width: 80%;
+                  margin: 10px auto;
+                " />
+              </div>
+            </div>
+          </div>
+        </footer>
 
-      <!-- GIGW Compliance Button -->
-      <div class="gigw-compliance" id="gigwButton">
-        <i class="fas fa-universal-access"></i>
+        <!-- GIGW Compliance Button -->
+        <div class="gigw-compliance0" id="gigwButton">
+          <i class="fas fa-universal-access"></i>
+        </div>
+
+        <!-- Accessibility Panel -->
+        <div class="accessibility-panel" id="accessibilityPanel">
+          <button id="increaseText">
+            <i class="fas fa-text-height"></i> Increase Text Size
+          </button>
+          <button id="decreaseText">
+            <i class="fas fa-text-height"></i> Decrease Text Size
+          </button>
+          <button id="resetText">
+            <i class="fas fa-undo"></i> Reset Text Size
+          </button>
+          <button id="toggleDarkMode">
+            <i class="fas fa-moon"></i> Toggle Dark Mode
+          </button>
+          <button id="readAloud">
+            <i class="fas fa-volume-up"></i> Read Aloud
+          </button>
+          <button id="stopReading">
+            <i class="fas fa-stop"></i> Stop Reading
+          </button>
+        </div>
       </div>
 
-      <!-- Accessibility Panel -->
-      <div class="accessibility-panel" id="accessibilityPanel">
-        <button id="increaseText">
-          <i class="fas fa-text-height"></i> Increase Text Size
-        </button>
-        <button id="decreaseText">
-          <i class="fas fa-text-height"></i> Decrease Text Size
-        </button>
-        <button id="resetText">
-          <i class="fas fa-undo"></i> Reset Text Size
-        </button>
-        <button id="toggleDarkMode">
-          <i class="fas fa-moon"></i> Toggle Dark Mode
-        </button>
-        <button id="readAloud">
-          <i class="fas fa-volume-up"></i> Read Aloud
-        </button>
-        <button id="stopReading">
-          <i class="fas fa-stop"></i> Stop Reading
-        </button>
-      </div>
-    </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Google Translator
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          {
-            pageLanguage: "mr",
-            includedLanguages: "mr,en,hi",
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          },
-          "google_translate_element"
-        );
-      }
-
-      // Visitor Counter
-      function updateVisitorCounter() {
-        if (localStorage.getItem("visits")) {
-          let visits = parseInt(localStorage.getItem("visits")) + 1;
-          localStorage.setItem("visits", visits);
-          document.getElementById("visitorCounter").innerText = visits;
-        } else {
-          localStorage.setItem("visits", 1);
-          document.getElementById("visitorCounter").innerText = 1;
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script>
+        // ---------------- Google Translator ----------------
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement(
+            {
+              pageLanguage: "mr",
+              includedLanguages: "mr,en,hi",
+              layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+            },
+            "google_translate_element"
+          );
         }
-      }
 
-      // Accessibility Panel Toggle
-      document
-        .getElementById("gigwButton")
-        .addEventListener("click", function () {
-          const panel = document.getElementById("accessibilityPanel");
-          panel.style.display =
-            panel.style.display === "block" ? "none" : "block";
-        });
-
-      // Text Size Controls
-      document
-        .getElementById("increaseText")
-        .addEventListener("click", function () {
-          document.body.classList.remove(
-            "text-small",
-            "text-large",
-            "text-xlarge"
-          );
-          if (document.body.classList.contains("text-large")) {
-            document.body.classList.remove("text-large");
-            document.body.classList.add("text-xlarge");
-          } else if (document.body.classList.contains("text-xlarge")) {
-            // Already at maximum
+        // ---------------- Visitor Counter ----------------
+        function updateVisitorCounter() {
+          if (localStorage.getItem("visits")) {
+            let visits = parseInt(localStorage.getItem("visits")) + 1;
+            localStorage.setItem("visits", visits);
+            document.getElementById("visitorCounter").innerText = visits;
           } else {
-            document.body.classList.add("text-large");
+            localStorage.setItem("visits", 1);
+            document.getElementById("visitorCounter").innerText = 1;
           }
-        });
+        }
+        document.addEventListener("DOMContentLoaded", updateVisitorCounter);
 
-      document
-        .getElementById("decreaseText")
-        .addEventListener("click", function () {
-          document.body.classList.remove(
-            "text-small",
-            "text-large",
-            "text-xlarge"
+        // ---------------- Counter Animation ----------------
+        function animateCounters() {
+          const counters = document.querySelectorAll(".counter");
+          const duration = 2500;
+          const interval = 50;
+
+          counters.forEach((counter) => {
+            const target = +counter.getAttribute("data-target");
+            const steps = duration / interval;
+            const increment = target / steps;
+            let current = 0;
+
+            const timer = setInterval(() => {
+              current += increment;
+              if (current >= target) {
+                counter.innerText = target;
+                clearInterval(timer);
+              } else {
+                counter.innerText = Math.floor(current);
+              }
+            }, interval);
+          });
+        }
+        document.addEventListener("DOMContentLoaded", animateCounters);
+
+        // ---------------- Gallery Modal ----------------
+        document.addEventListener("DOMContentLoaded", function () {
+          const galleryImages = document.querySelectorAll(".gallery-img");
+          const modalImage = document.getElementById("modalImage");
+          const modalCaption = document.getElementById("modalCaption");
+          const imageModal = new bootstrap.Modal(
+            document.getElementById("imageModal")
           );
-          if (document.body.classList.contains("text-large")) {
-            document.body.classList.remove("text-large");
-          } else if (document.body.classList.contains("text-xlarge")) {
-            document.body.classList.remove("text-xlarge");
-            document.body.classList.add("text-large");
-          } else {
-            document.body.classList.add("text-small");
+
+          galleryImages.forEach((image) => {
+            image.addEventListener("click", function () {
+              modalImage.src = this.src;
+              modalCaption.innerText = this.dataset.caption;
+              imageModal.show();
+            });
+          });
+
+          // ---------------- See More Button ----------------
+          const seeMoreBtn = document.getElementById("seeMoreBtn");
+          const moreImages = document.getElementById("moreImages");
+
+          if (seeMoreBtn && moreImages) {
+            seeMoreBtn.addEventListener("click", () => {
+              if (moreImages.classList.contains("d-none")) {
+                moreImages.classList.remove("d-none");
+                seeMoreBtn.innerText = "See Less";
+              } else {
+                moreImages.classList.add("d-none");
+                seeMoreBtn.innerText = "See More";
+              }
+            });
           }
         });
 
-      document
-        .getElementById("resetText")
-        .addEventListener("click", function () {
-          document.body.classList.remove(
-            "text-small",
-            "text-large",
-            "text-xlarge"
-          );
+        // ---------------- Accessibility Panel ----------------
+        const gigwButton = document.getElementById("gigwButton");
+        const accessibilityPanel = document.getElementById("accessibilityPanel");
+
+        gigwButton.addEventListener("click", () => {
+          accessibilityPanel.classList.toggle("active");
         });
 
-      // Dark Mode Toggle
-      document
-        .getElementById("toggleDarkMode")
-        .addEventListener("click", function () {
-          document.body.classList.toggle("dark-mode");
+        let currentSize = 100;
+
+        document.getElementById("increaseText").addEventListener("click", () => {
+          currentSize += 10;
+          document.body.style.fontSize = currentSize + "%";
         });
 
-      // Text-to-Speech Functionality
-      let speechSynthesis = window.speechSynthesis;
-      let speechUtterance = null;
-
-      document
-        .getElementById("readAloud")
-        .addEventListener("click", function () {
-          // Get all text content from the main content area
-          const mainContent = document.querySelector(".container.mt-4");
-          const text = mainContent.textContent.replace(/\s+/g, " ").trim();
-
-          // Stop any ongoing speech
-          if (speechSynthesis.speaking) {
-            speechSynthesis.cancel();
-          }
-
-          // Create speech utterance
-          speechUtterance = new SpeechSynthesisUtterance(text);
-          speechUtterance.lang = "mr-IN"; // Marathi language
-          speechUtterance.rate = 0.9; // Slightly slower pace
-
-          // Start speaking
-          speechSynthesis.speak(speechUtterance);
+        document.getElementById("decreaseText").addEventListener("click", () => {
+          currentSize -= 10;
+          document.body.style.fontSize = currentSize + "%";
         });
 
-      document
-        .getElementById("stopReading")
-        .addEventListener("click", function () {
-          if (speechSynthesis.speaking) {
-            speechSynthesis.cancel();
-          }
+        document.getElementById("resetText").addEventListener("click", () => {
+          currentSize = 100;
+          document.body.style.fontSize = "100%";
         });
 
-      // Improved carousel animation
-      document.addEventListener("DOMContentLoaded", function () {
-        const carousel = document.querySelector("#mainCarousel");
-        carousel.addEventListener("slide.bs.carousel", (event) => {
-          // Add any custom animation here if needed
+        document
+          .getElementById("toggleDarkMode")
+          .addEventListener("click", () => {
+            document.body.classList.toggle("dark-mode");
+          });
+
+        // ---------------- Text-to-Speech ----------------
+        let synth = window.speechSynthesis;
+        let utterance;
+
+        document.getElementById("readAloud").addEventListener("click", () => {
+          let text = document.body.innerText;
+          if (synth.speaking) synth.cancel();
+          utterance = new SpeechSynthesisUtterance(text);
+          synth.speak(utterance);
         });
-      });
-    </script>
-    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  </body>
+
+        document.getElementById("stopReading").addEventListener("click", () => {
+          if (synth.speaking) synth.cancel();
+        });
+      </script>
+
+      <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+
 </html>
