--- a/index.html
+++ b/index.html
@@ -352,16 +352,16 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-md-6 text-center border-end">
-                  <img src="img/GP WadegaonSta.png" class="officer-img mb-3" alt="Sarpanch" style="
+                  <img src="img/Sarpanch.jpg" class="officer-img mb-3" alt="Sarpanch" style="
                     width: 250px;
                     height: 300px;
                     object-fit: cover;
                     border-radius: 8px;
                   " />
-                  <h5 class="card-title">श्री.डी.आर.अवसरे </h5>
-                  <p class="card-text">ग्रामपंचायत अधिकारी</p>
+                  <h5 class="card-title">श्री.श्रीकांत भीमराव लोणारे</h5>
+                  <p class="card-text">सरपंच</p>
                   <p class="card-text">
-                    <i class="fas fa-phone"></i><a href="tel:+919049904072">9049904072</a>
+                    <i class="fas fa-phone"></i><a href="tel:+919370694651">9370694651</a>
                   </p>
                 </div>
                 <div class="col-md-6 text-center border-end">
