--- a/pm_awas.html
+++ b/pm_awas.html
@@ -275,65 +275,48 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>ग्रामपंचायतीची सर्वसाधारण माहिती</h5>
-            <p>
-              ग्रामपंचायतीचे नाव : वडेगाव <br />
-              ग्रामपंचायतीचे नाव : वडेगाव स्थापना : 02 ऑक्टोबर 1959 <br />
-              Email ID :wadegaon.stegp@rediffmail.com
- <br />
-              सेन्सस कोड ÷ : 549697 <br />
-              तालुक्यापासून अंतर : 18 कि.मी. जिल्हा मुख्यालयापासून अंतर : 82
-              कि.मी.
-            </p>
-          </div>
-
-          <div class="col-md-4">
-            <h5>द्रुत लिंक</h5>
-            <div class="quick-links">
-              <a href="index.html"
-                ><i class="fas fa-angle-right"></i> मुख्य पृष्ठ</a
-              >
-              <a href="villageinfo.html"
-                ><i class="fas fa-angle-right"></i> ग्रामपंचायती विषयी</a
-              >
-              <a href="tax-collection.html"
-                ><i class="fas fa-angle-right"></i> आर्थिक माहिती</a
-              >
-              <a href="yojna.html"
-                ><i class="fas fa-angle-right"></i> योजना व कामे</a
-              >
-              <a href="services-for-citizens.html"
-                ><i class="fas fa-angle-right"></i> ऑनलाइन सेवा</a
-              >
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h5>संपर्क</h5>
-            <div class="contact-info">
-              <p>
-                <i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव,<br />
-                ता. सुरगाणा, जि. नाशिक,<br />
-                पिन. ४२२२११
-              </p>
-              <p><i class="fas fa-envelope"></i>wadegaon.stegp@rediffmail.com
-</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- Footer Section Start -->
+<footer class="footer">
+  <div class="row">
+    <!-- Column 1 -->
+    <div class="col">
+      <h5>ग्रामपंचायतीची सर्वसाधारण माहिती</h5>
+      <p>ग्रामपंचायतीचे नाव : वडेगाव</p>
+      <p>ग्रामपंचायतीचे स्थापना : 02 ऑक्टोबर 1959</p>
+      <p>Email ID : <a href="mailto:wadegaon.stegp@rediffmail.com">wadegaon.stegp@rediffmail.com</a></p>
+      <p>सेन्सस कोड : 549697</p>
+      <p>तालुक्यापासून अंतर : 18 कि.मी.</p>
+      <p>जिल्हा मुख्यालयापासून अंतर : 82 कि.मी.</p>
     </div>
 
-      <!-- Copyright -->
-            <div class="row">
-              <div class="col text-center">
-                <p class="mb-0">
-                  © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                  Design & Developed 
+    <!-- Column 2 -->
+    <div class="col quick-links">
+      <h5>द्रुत लिंक</h5>
+      <a href="#">मुख्य पृष्ठ</a>
+      <a href="#">ग्रामपंचायतीची माहिती</a>
+      <a href="#">आर्थिक माहिती</a>
+      <a href="#">योजना व कामे</a>
+      <a href="#">ऑनलाइन सेवा</a>
+    </div>
+
+    <!-- Column 3 -->
+    <div class="col contact-info">
+      <h5>संपर्क</h5>
+      <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता. सर्जेगाव, जि. नाशिक, पिन. ४२३२०३</p>
+      <p><i class="fas fa-envelope"></i> <a href="mailto:wadegaon.stegp@rediffmail.com">wadegaon.stegp@rediffmail.com</a></p>
+    </div>
+  </div>
+
+  <!-- Footer Bottom -->
+  <div class="footer-bottom">
+    <p>© 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव.</p>
+    <p>Design & Developed by <strong>Universal Hope Foundation</strong></p>
+  </div>
+</footer>
+<!-- Footer Section End -->
+    </div>
+
+ 
                   
 
                 <!-- </p>
