--- a/members.html
+++ b/members.html
@@ -261,7 +261,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/sarpanch.jpeg"
+                  src="img/Sarpanch.jpg"
                   alt="सरपंच"
                   style="
                     width: 250px;
@@ -271,10 +271,10 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">श्री. अशोक उत्तम गवळी</h5>
+                <h5 class="card-title fw-bold mb-1">श्री.श्रीकांत भीमराव लोणारे</h5>
                 <p class="text-muted mb-2">सरपंच</p>
                 <p>
-                  <i class="fas fa-phone text-success"></i > <a href="tel:+917350937991">7350937991</a>/<a href="tel:+919404208217">9404208217</a>
+                  <i class="fas fa-phone text-success"></i > <a href="tel:+919370694651">9370694651</a>/<a href="tel:+919404208217">9404208217</a>
                 </p>
               </div>
             </div>
@@ -285,7 +285,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/upsarpanch.jpeg"
+                  src="img/upsarpanch.jpg"
                   alt="उपसरपंच"
                   style="
                     width: 250px;
@@ -295,9 +295,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">श्री. हिरामण किसन भोये</h5>
+                <h5 class="card-title fw-bold mb-1">श्री.यशवंत सितकुरा रामटेके</h5>
                 <p class="text-muted mb-2">उपसरपंच</p>
-                <p><i class="fas fa-phone text-success"></i> <a href="tel:+919423548925">9423548925</a></p>
+                <p><i class="fas fa-phone text-success"></i> <a href="tel:+918806533040">8806533040</a></p>
               </div>
             </div>
           </div>
@@ -307,7 +307,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/officer1.jpeg"
+                  src="img/officer1.png"
                   alt="ग्रामपंचायत अधिकारी"
                   style="
                     width: 250px;
@@ -317,17 +317,17 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">श्री. सुकदेव दगा बागुल</h5>
+                <h5 class="card-title fw-bold mb-1">श्री.डी.आर.अवसरे </h5>
                 <p class="text-muted mb-2">ग्रामपंचायत अधिकारी</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+91 9370694651">9370694651</a></p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919049904072">9049904072</a></p>
               </div>
             </div>
           </div>
 
           <!-- 20 -->
            <div class="col-md-3 col-sm-6 mb-4">
-            <div class="card shadow-sm h-100 text-center border-0 rounded-3">
-              <div class="card-body">
+            <!-- <div class="card shadow-sm h-100 text-center border-0 rounded-3">
+              <!-- <div class="card-body">
                 <img
                   src="img/krushi.jpeg"
                   alt="कृषी सहायक "
@@ -344,8 +344,8 @@
                 </h5>
                 <p class="text-muted mb-2"> कृषी सहायक</p>
                  <p><i class="fas fa-phone text-success"></i><a href="tel:+919423785607"> 9423785607</a></p>
-              </div>
-            </div>
+              </div> -->
+            </div> -->
           </div>
 
           <!---->
@@ -357,7 +357,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/sadsy1.jpeg"
+                  src="img/sadsy1.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -367,9 +367,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">संदिप मोहन भोये</h5>
+                <h5 class="card-title fw-bold mb-1">श्री.धनंजय विनायक राउत</h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+919011115752">9011115752</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919545670836">9545670836</a> </p>
               </div>
             </div>
           </div>
@@ -379,7 +379,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/hiraman.jpeg"
+                  src="img/sadsy2.jpg"
                   alt="सदस्य / संगणक परिचालक"
                   style="
                     width: 250px;
@@ -389,9 +389,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">हिरामण कमलाकर हाडस</h5>
-                <p class="text-muted mb-2">सदस्य / संगणक परिचालक</p>
-                <p><i class="fas fa-phone text-success"></i> <a href="tel:+919359153998">9359153998</a></p>
+                <h5 class="card-title fw-bold mb-1">सौ.अर्चना रवींद्र नान्हे </h5>
+                <p class="text-muted mb-2">सदस्य </p>
+                <p><i class="fas fa-phone text-success"></i> <a href="tel:+919322562351">9322562351</a></p>
               </div>
             </div>
           </div>
@@ -401,7 +401,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/priya.jpeg"
+                  src="img/sadsy3.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -411,9 +411,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">प्रिया विकास भोये</h5>
+                <h5 class="card-title fw-bold mb-1">सौ.सीमा पप्पू खंडाते</h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+919370791282">9370791282</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919822574231">9822574231</a> </p>
               </div>
             </div>
           </div>
@@ -423,7 +423,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/hira.jpeg"
+                  src="img/sadsy4.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -434,10 +434,10 @@
                   class="mb-3"
                 />
                 <h5 class="card-title fw-bold mb-1">
-                  हिराबाई शिवाजी गांगुर्डे
+                  सौ.कुंदा अशोक खोब्रागडे
                 </h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+917887467705">7887467705</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919158531621">9158531621</a> </p>
               </div>
             </div>
           </div>
@@ -447,7 +447,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/pushpa.jpeg"
+                  src="img/sadsy5.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -457,9 +457,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">पुष्पा विलास मोरे</h5>
+                <h5 class="card-title fw-bold mb-1">श्री.मधुकर जयराम वल्खे</h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+918999791839">8999791839</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+917066054658">7066054658</a> </p>
               </div>
             </div>
           </div>
@@ -469,7 +469,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/sadsya.jpeg"
+                  src="img/sadsy6.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -479,9 +479,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">वामन यशवंत गवळी</h5>
+                <h5 class="card-title fw-bold mb-1">सौ.आशाताई विनोद खुणे</h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+919421852312">9421852312</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919370357824  ">9370357824</a> </p>
               </div>
             </div>
           </div>
@@ -501,9 +501,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">भाग्यश्री भास्कर भोये</h5>
+                <h5 class="card-title fw-bold mb-1"></h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+919423804428">9423804428</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+91"></a> </p>
               </div>
             </div>
           </div>
@@ -523,14 +523,14 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">संगीता सोमनाथ गवळी</h5>
+                <h5 class="card-title fw-bold mb-1"></h5>
                 <p class="text-muted mb-2">सदस्य</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+919307694016">9307694016</a> </p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+91"></a> </p>
               </div>
             </div>
           </div>
 
-          <!-- 12 -->
+          <!-- 12
           <div class="col-md-3 col-sm-6 mb-4">
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
@@ -552,7 +552,7 @@
             </div>
           </div>
 
-          <!-- 13 -->
+           13 
           <div class="col-md-3 col-sm-6 mb-4">
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
@@ -574,7 +574,7 @@
             </div>
           </div>
 
-          <!-- 14 -->
+           14 
           <div class="col-md-3 col-sm-6 mb-4">
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
@@ -594,7 +594,7 @@
                 <p><i class="fas fa-phone text-success"></i><a href="tel:+919420002283">9420002283</a> </p>
               </div>
             </div>
-          </div>
+          </div> -->
 
          <!--कर्मचारी-->
             <div class="container mt-4">
@@ -604,7 +604,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/vijay.jpeg"
+                  src="img/sadsy7.jpg"
                   alt="लिपिक"
                   style="
                     width: 250px;
@@ -614,9 +614,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">श्री. विजय चंदर भोये</h5>
-                <p class="text-muted mb-2">लिपिक</p>
-                <p><i class="fas fa-phone text-success"></i> <a href="tel:+919405355991">9405355991</a></p>
+                <h5 class="card-title fw-bold mb-1">पराग धनराज सोनटक्के </h5>
+                <p class="text-muted mb-2">शिपाई</p>
+                <p><i class="fas fa-phone text-success"></i> <a href="tel:+919923696639">9923696639</a></p>
               </div>
             </div>
           </div>
@@ -636,9 +636,9 @@
                   "
                   class="mb-3"
                 />
-                <h5 class="card-title fw-bold mb-1">श्री. कैलास हरी गायकवाड</h5>
-                <p class="text-muted mb-2">शिपाई</p>
-                <p><i class="fas fa-phone text-success"></i><a href="tel:+917218953286">7218953286</a></p>
+                <h5 class="card-title fw-bold mb-1">पराग धनराज सोनटक्के</h5>
+                <p class="text-muted mb-2">पा.पु. कर्मचारी</p>
+                <p><i class="fas fa-phone text-success"></i><a href="tel:+919923696639">9923696639</a></p>
               </div>
             </div>
           </div>
