--- a/members.html
+++ b/members.html
@@ -491,7 +491,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/BBB.jpeg"
+                  src="img/sadsy7.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
@@ -513,7 +513,7 @@
             <div class="card shadow-sm h-100 text-center border-0 rounded-3">
               <div class="card-body">
                 <img
-                  src="img/SG.jpeg"
+                  src="img/sadsy8.jpg"
                   alt="सदस्य"
                   style="
                     width: 250px;
