--- a/members.html
+++ b/members.html
@@ -929,10 +929,12 @@
                   class="mb-3"
                 />
                 <h5 class="card-title fw-bold mb-1">
-                  प्रेयंका गांधी महिला बचत गट (वडेगाव) 
+                 चंद्रकांत उद्धव खुणे 
                 </h5>
                 <p class="text-muted mb-2"> रेशनदुकानदार  No. 1</p>
-                 <p><i class="fas fa-phone text-success"></i><a href="tel:+919420003835">9420003835</a></p>
+                 <p><i class="fas fa-phone text-success"></i><a href="tel:+919673393101
+">9673393101
+</a></p>
               </div>
             </div>
           </div>
@@ -1027,10 +1029,12 @@
                   class="mb-3"
                 />
                 <h5 class="card-title fw-bold mb-1">
-                   श्री. चेतन बागुल (हवलदार) 
+                   श्री. रेखा इंदल राउत 
                 </h5>
                 <p class="text-muted mb-2"> हवलदार</p>
-                 <p><i class="fas fa-phone text-success"></i><a href="tel:+918796273444">8796273444</a></p>
+                 <p><i class="fas fa-phone text-success"></i><a href="tel:+919545009731
+">9545009731
+</a></p>
               </div>
             </div>
           </div>
@@ -1124,10 +1128,10 @@
                   class="mb-3"
                 />
                 <h5 class="card-title fw-bold mb-1">
-                   श्रीमती. हौसाबाई काशिनाथ मोरे (खरुडे)
+                   श्रीमती. वंदना दुर्वास खुणे
                 </h5>
                 <p class="text-muted mb-2">अंगणवाडी   सेविका No. 1</p>
-                 <p><i class="fas fa-phone text-success"></i><a href="tel:+919284385254">9284385254</a></p>
+                 <p><i class="fas fa-phone text-success"></i><a href="tel:+917498292792">7498292792</a></p>
               </div>
             </div>
           </div>
@@ -1147,10 +1151,10 @@
                   class="mb-3"
                 />
                 <h5 class="card-title fw-bold mb-1">
-                   श्रीमती. मंगल गोविंद भोये (वडेगाव -१)
+                   श्रीमती. आरती भगवान शहारे 
                 </h5>
                 <p class="text-muted mb-2">अंगणवाडी   सेविका No. 2</p>
-                 <p><i class="fas fa-phone text-success"></i><a href="tel:+918796273444">8796273444</a></p>
+                 <p><i class="fas fa-phone text-success"></i><a href="tel:+918329877205">8329877205</a></p>
               </div>
             </div>
           </div>
