--- a/villageinfo.html
+++ b/villageinfo.html
@@ -255,37 +255,7 @@
       <div class="section">
         <h2 class="section-title">गावाचा इतिहास</h2>
         <p>
-          वडेगाव, महाराष्ट्राच्या नाशिक जिल्ह्यातील सुरगाणा तालुक्यात वसलेले एक
-          महत्त्वपूर्ण गाव आहे. हे गाव वडेगाव ग्रामपंचायतीचे मुख्यालय आहे,
-          ज्यामध्ये वडेगावसह हिरडीपाडा, चिखली, आणि खरुदे या गावांचा समावेश आहे.
-          नाशिक जिल्हा मुख्यालयापासून सुमारे ९० किलोमीटर अंतरावर असलेले हे गाव
-          आदिवासीबहुल भागातील विकास आणि प्रशासनाचे एक केंद्र आहे. वडेगाव आणि
-          परिसरातील लोकसंख्या प्रामुख्याने आदिवासी समाजाची आहे. यामध्ये कोकणा,
-          वारली, आणि महादेव कोळी या जमातींचा मोठ्या प्रमाणावर समावेश आहे. येथील
-          रहिवाशांची मुख्य भाषा मराठी असली तरी, दैनंदिन व्यवहारात डांगी आणि
-          कोकणी या बोलीभाषांचा वापर अधिक केला जातो. या भागातील संस्कृती ही
-          निसर्गाशी जवळून जोडलेली असून, पारंपारिक सण आणि उत्सव मोठ्या उत्साहात
-          साजरे केले जातात.
-        </p>
-
-        <p>
-          ग्रामपंचायत सौंदर्य माहिती : वडेगाव हे आदिवासी पट्ट्यात आणि
-          सह्याद्रीच्या डोंगररांगांमध्ये वसलेले असल्यामुळे, इथले निसर्गसौंदर्य
-          खूप आल्हाददायक आहे. विशेषतः पावसाळ्यात हा परिसर हिरवागार होतो आणि
-          डोंगरांमधून अनेक छोटे-मोठे धबधबे दिसतात.
-        </p>
-        <p>
-          वडेगाव, तालुका सुरगाणा, जिल्हा नाशिक वडेगाव हे गाव महाराष्ट्र
-          राज्यातील नाशिक जिल्ह्यात सुरगाणा तालुक्यातील एक गाव आहे. हे जिल्हा
-          मुख्यालय नाशिकपासून सुमारे ९० किमी अंतरावर आणि तालुका मुख्यालय सुरगाणा
-          पासून सुमारे १५-१८ किमी अंतरावर आहे. प्रशासकीय दृष्ट्या वडेगाव हे
-          स्वतःचे ग्रामपंचायत केंद्र आहे. पोस्टल सेवा: वडेगाव गावाचा पिन कोड
-          ४२२२११ आहे. या गावासाठीची पोस्टल सेवा सुरगाणा सब ऑफिस (S.O.) द्वारे
-          पुरवली जाते. जवळची गावे: या गावाच्या आसपासची काही महत्त्वाची गावे
-          पोहाळी (Pohali), हतगड (Hatgad), मोहपाडा (Mohpada), सरड (Sarad),
-          उंबरपाडा दिगर (Umbarpada Digar) घोडांबे (Ghodambe) आणि साजोळे (Sajole)
-          आहेत. जवळची मोठी शहरे: वडेगाव गावापासून नाशिक, मालेगाव, कळवण आणि सटाणा
-          ही मोठी शहरे जवळ आहेत
+          ग्रामपंचायत वडेगाव/स्टेशन हे गोंदिया जिल्ह्यातील अर्जुनी/मोरगाव तालुक्यात वसलेले एक शेती प्रधान आणि प्रगतशील गाव असून, याची ओळख पर्यावरणपूरक जीवनशैली, सामाजिक एकता आणि सर्वांगीण विकासासाठी घेतलेल्या उपक्रमांमुळे विशेष ठरते. हे गाव नैसर्गिक सौंदर्याने नटलेले असून, पर्यावरण संरक्षणासाठी येथे विशेष प्रयत्न केले जातात. सुमारे १३१२ लोकसंख्या असलेल्या या गावातील ग्रामस्थांनी स्वच्छता, शिक्षण, आरोग्य, आणि कृषी क्षेत्रात उल्लेखनीय कामगिरी करत गावाचा विकास साधला आहे. 1959 मध्ये स्थापनेपासून ग्रामपंचायतने गावाच्या सर्वांगीण प्रगतीसाठी सातत्याने प्रयत्न केले असून, सामाजिक आणि पर्यावरणपूरक उपक्रम राबवून गावाच्या विकासाची दिशा निश्चित केली आहे. सामाजिक सहकार्य, पारदर्शक प्रशासन आणि शाश्वत विकासाच्या माध्यमातून गावाने स्वतःची वेगळी ओळख निर्माण केली आहे.स्वच्छता मोहिमा, वृक्षारोपण कार्यक्रम, शिक्षण व्यवस्था सुधारणा, आरोग्य सुविधांचा विकास आणि आधुनिक शेती तंत्रज्ञानाचा अवलंब यांसारख्या उपक्रमांमुळे गावाने एक आदर्श ग्राम म्हणून नावारूपास येण्याचा मार्ग तयार केला आहे. सामाजिक बांधिलकी आणि सुशासनाचा उत्तम नमुना असलेल्या वडेगाव/स्टेशन ग्रामपंचायतीने आपल्या संकल्पनेतून गावाच्या उज्ज्वल भविष्यासाठी एक दिशादर्शक पायंडा निर्माण केला आहे. भविष्यात अधिक प्रगतशील आणि स्वयंपूर्ण ग्राम बनवण्यासाठी येथील ग्रामस्थ आणि ग्रामपंचायत कटिबद्ध असून, आपल्या प्रयत्नांमुळे हे गाव एक आदर्श ग्राम म्हणून ओळखले जाणार आहे.
         </p>
       </div>
 
@@ -357,12 +327,12 @@
       <p><strong>जवळची शहरे:</strong> नाशिक, मालेगाव, कळवण, सटाणा</p>
       <p><strong> तालुका:</strong> सुरगाणा</p>
       <p><strong>जिल्हा:</strong> नाशिक</p>
-      <p><strong> पिन कोड:</strong> 422211</p>
-      <p><strong> स्थान:</strong> 20.509311, 73.754630</p>
+      <p><strong> पिन कोड:</strong> 444502</p>
+      <p><strong> स्थान:</strong> 20.7625945,79.9024232</p>
       <p><strong> लोकसंख्या:</strong> 1312 (पुरुष: 660, महिला: 652)</p>
       <p><strong>कुटुंब संख्या:</strong> 254</p>
-      <p><strong> क्षेत्रफळ:</strong> 2332.74 हेक्टर</p>
-      <p><strong> वार्ड संख्या:</strong> 5</p>
+      <p><strong> क्षेत्रफळ:</strong>490 हेक्टर</p>
+      <p><strong> वार्ड संख्या:</strong> 3</p>
       <p><strong> ईमेल आयडी:</strong> <a href="mailto:wadegaon.stegp@rediffmail.com
 ">wadegaon.stegp@rediffmail.com
 </a></p>
@@ -538,7 +508,7 @@
       <!-- Contact -->
       <div class="col-md-4 mb-4">
         <h5>संपर्क</h5>
-        <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता. सुरगाणा, जि. नाशिक, पिन: 422211</p>
+        <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता. सुरगाणा, जि. नाशिक, पिन: 444502</p>
         <p><i class="fas fa-envelope"></i><a href="mailto:wadegaon.stegp@rediffmail.com
 ">wadegaon.stegp@rediffmail.com
 </a></p>
