--- a/ramai_awas.html
+++ b/ramai_awas.html
@@ -48,7 +48,7 @@
       class="logo-header py-3 d-flex justify-content-between align-items-center px-4"
     >
       <div class="logo-container d-flex align-items-center">
-        <img src="img/main_logo.png" alt="ग्रामपंचायत लोगो" class="logo me-3" />
+        <img src="img/main_logo.jpg" alt="ग्रामपंचायत लोगो" class="logo me-3" />
         <div class="logo-text"></div>
       </div>
       <div class="contact-short d-none d-md-block text-end"></div>
@@ -310,7 +310,7 @@
   <!-- Footer Bottom -->
   <div class="footer-bottom">
     <p>© 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव.</p>
-    <p>Design & Developed by <strong>Universal Hope Foundation</strong></p>
+    <p><!-- Design & Developed  --> by <strong>Universal Hope Foundation</strong></p>
   </div>
 </footer>
 <!-- Footer Section End -->v>
