--- a/govwork.html
+++ b/govwork.html
@@ -45,7 +45,7 @@
     <!-- Logo Header -->
 <div class="logo-header py-3 d-flex justify-content-between align-items-center px-4">
   <div class="logo-header py-3 d-flex justify-content-center align-items-center">
-  <img src="img/main_logo.png" alt="ग्रामपंचायत लोगो" class="logo">
+  <img src="img/main_logo.jpg" alt="ग्रामपंचायत लोगो" class="logo">
 </div>
         
       </div>
