--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Logo Header -->
   <div class="logo-header py-3 d-flex justify-content-between align-items-center px-4">
     <div class="logo-container d-flex align-items-center">
-      <img src="img/main_logo.png" alt="ग्रामपंचायत लोगो" class="logo me-3" />
+      <img src="img/main_logo.jpg" alt="ग्रामपंचायत लोगो" class="logo me-3" />
       <div class="logo-text"></div>
     </div>
     <div class="contact-short d-none d-md-block text-end"></div>
@@ -652,7 +652,7 @@
               <div class="col text-center">
                 <p class="mb-0">
                   © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                  Design & Developed 
+                  <!-- Design & Developed  --> 
                   
 
                 <!-- </p>
