--- a/members.html
+++ b/members.html
@@ -47,7 +47,7 @@
     <!-- Logo Header -->
 <div class="logo-header py-3 d-flex justify-content-between align-items-center px-4">
   <div class="logo-header py-3 d-flex justify-content-center align-items-center">
-  <img src="img/main_logo.png" alt="ग्रामपंचायत लोगो" class="logo">
+  <img src="img/main_logo.jpg" alt="ग्रामपंचायत लोगो" class="logo">
 </div>
 
   </div>
@@ -1535,7 +1535,7 @@
               <div class="col text-center">
                 <p class="mb-0">
                   © 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव. <br />
-                  Design & Developed 
+                  <!-- Design & Developed  --> 
                   
 
                 <!-- </p>
