--- a/impnumbers.html
+++ b/impnumbers.html
@@ -956,7 +956,7 @@
       <!-- Contact -->
       <div class="col-md-4 mb-4">
         <h5>संपर्क</h5>
-        <p><i class="fas fa-map-marker-alt"></i><a href="https://maps.app.goo.gl/6vtHfcsNWy1YBrCF7"> ग्रामपंचायत वडेगाव, ता. सुरगाणा, जि. नाशिक, पिन: 444502</a><</p>
+        <p><i class="fas fa-map-marker-alt"></i><a href="https://maps.app.goo.gl/6vtHfcsNWy1YBrCF7"> ग्रामपंचायत वडेगाव, पिन: 444502</a><</p>
         <p><i class="fas fa-envelope"></i><a href="mailto:wadegaon.stegp@rediffmail.com
 ">wadegaon.stegp@rediffmail.com
 </a></p>
