--- a/ramaiawas.html
+++ b/ramaiawas.html
@@ -319,7 +319,7 @@
     <!-- Column 3 -->
     <div class="col contact-info">
       <h5>संपर्क</h5>
-      <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता. सर्जेगाव, जि. नाशिक, पिन. ४२३२०३</p>
+      <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, पिन: 444502</p>
       <p><i class="fas fa-envelope"></i> <a href="mailto:wadegaon.stegp@rediffmail.com">wadegaon.stegp@rediffmail.com</a></p>
     </div>
   </div>
