--- a/complain-us.html
+++ b/complain-us.html
@@ -381,7 +381,7 @@
       <!-- Contact -->
       <div class="col-md-4 mb-4">
         <h5>संपर्क</h5>
-        <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता. सुरगाणा, जि. नाशिक, पिन: 444502</p>
+        <p><i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, पिन: 444502</p>
         <p><i class="fas fa-envelope"></i><a href="mailto:wadegaon.stegp@rediffmail.com
 ">wadegaon.stegp@rediffmail.com
 </a></p>
