--- a/govwork.html
+++ b/govwork.html
@@ -391,8 +391,7 @@ document.getElementById("stopReading").addEventListener("click", function () {
         <div class="col-md-4 mb-4">
           <h5>संपर्क</h5>
           <p>
-            <i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, ता.
-            सुरगाणा, जि. नाशिक, पिन: 444502
+            <i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव, पिन: 444502
           </p>
           <p>
             <i class="fas fa-envelope"></i
