--- a/villageinfo.html
+++ b/villageinfo.html
@@ -264,8 +264,9 @@
       <div class="section">
         <h2 class="section-title">मुख्य पिके</h2>
         <p>
-          स्ट्रॉबेरी (Strawberry): वडेगावचा घाटमाथा आता स्ट्रॉबेरीच्या उत्पादनासाठी ओळखला जातो. महाबळेश्वर नंतर या भागाची स्ट्रॉबेरीसाठी एक विशेष ओळख निर्माण झाली आहे.
-           इथले शेतकरी आधुनिक तंत्रज्ञान वापरून दर्जेदार स्ट्रॉबेरीचे उत्पादन घेत आहेत आणि त्यामुळे त्यांचे आर्थिक उत्पन्न वाढले आहे.<br>
+         • भात (Paddy): भात हे गावातील मुख्य पिक असून खरीप आणि रब्बी असे एका वर्षात २ वेळा उत्पादन घेतले जाते.
+• तूर (Tur), ही कडधान्ये देखील या परिसरात घेतली जातात.
+आणि इतर भाजीपाला पिके पण घेतली जातात.<br>
 
          भात (Paddy): पावसाळ्यात भात हे एक महत्त्वाचे पीक आहे.<br>
 
@@ -326,7 +327,7 @@
       </p>
       <p><strong>जवळची शहरे:</strong> नाशिक, मालेगाव, कळवण, सटाणा</p>
       <p><strong> तालुका:</strong> सुरगाणा</p>
-      <p><strong>जिल्हा:</strong> नाशिक</p>
+      <p><strong>जिल्हा:</strong> -</p>
       <p><strong> पिन कोड:</strong> 444502</p>
       <p><strong> स्थान:</strong> 20.7625945,79.9024232</p>
       <p><strong> लोकसंख्या:</strong> 1312 (पुरुष: 660, महिला: 652)</p>
@@ -484,7 +485,7 @@
         <h5>ग्रामपंचायतीची माहिती</h5>
         <p>
           नाव: वडेगाव <br>
-          स्थापना: 02 ऑक्टोबर 1959 <br>
+          स्थापना: - <br>
           Email: wadegaon.stegp@rediffmail.com
  <br>
           सेन्सस कोड: 549697 <br>
