--- a/index.html
+++ b/index.html
@@ -430,33 +430,33 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3" id="gallery">
             <div class="col">
               <div class="card gallery-card position-relative">
-                <img src="img/dharan.jpeg" class="card-img-top gallery-img" alt="Image 1" data-caption="वडेगाव धरण" />
+                <img src="img\no_image.png" class="card-img-top gallery-img" alt="Image 1" data-caption="वडेगाव धरण" />
                 <div class="hover-caption">Click to zoom</div>
               </div>
             </div>
             <div class="col">
               <div class="card gallery-card position-relative">
-                <img src="img/mandir.jpeg" class="card-img-top gallery-img" alt="Image 2"
+                <img src="img\no_image.png" class="card-img-top gallery-img" alt="Image 2"
                   data-caption="हनुमान मंदिर वडेगाव" />
                 <div class="hover-caption">Click to zoom</div>
               </div>
             </div>
             <div class="col">
               <div class="card gallery-card position-relative">
-                <img src="img/gp.jpg" class="card-img-top gallery-img" alt="Image 3"
+                <img src="img\no_image.png" class="card-img-top gallery-img" alt="Image 3"
                   data-caption="ग्रामपंचायत कार्यालय" />
                 <div class="hover-caption">Click to zoom</div>
               </div>
             </div>
             <div class="col">
               <div class="card gallery-card position-relative">
-                <img src="img/schl.jpg" class="card-img-top gallery-img" alt="Image 3" data-caption="वडेगाव शाळा" />
+                <img src="img\no_image.png" class="card-img-top gallery-img" alt="Image 3" data-caption="वडेगाव शाळा" />
                 <div class="hover-caption">Click to zoom</div>
               </div>
             </div>
             <div class="col">
               <div class="card gallery-card position-relative">
-                <img src="img/gp1.jpg" class="card-img-top gallery-img" alt="Image 4" data-caption="ग्रामपंचायत  सभा" />
+                <img src="img\no_image.png" class="card-img-top gallery-img" alt="Image 4" data-caption="ग्रामपंचायत  सभा" />
                 <div class="hover-caption">Click to zoom</div>
               </div>
             </div>
