--- a/impnumbers.html
+++ b/impnumbers.html
@@ -390,11 +390,11 @@
           </div>
         </div>
       
-        <!-- नाशिक रोड पोलिस स्टेशन -->
+        <!-- Akola रोड पोलिस स्टेशन -->
         <div class="col-md-3">
           <div class="contact-card">
             <div class="contact-card-header">
-              <i class="fas fa-map-marker-alt" style="color: blue;"></i> नाशिक रोड पोलिस स्टेशन
+              <i class="fas fa-map-marker-alt" style="color: blue;"></i> Akola रोड पोलिस स्टेशन
             </div>
             <div class="contact-card-body">
               <div class="contact-item">
@@ -467,11 +467,11 @@
           </div>
         </div>
       
-        <!-- S.D.P.O. नाशिक ग्रामीण -->
+        <!-- S.D.P.O. Akola ग्रामीण -->
         <div class="col-md-3">
           <div class="contact-card">
             <div class="contact-card-header">
-              <i class="fas fa-map-marker-alt" style="color: blue;"></i> S.D.P.O. नाशिक ग्रामीण
+              <i class="fas fa-map-marker-alt" style="color: blue;"></i> S.D.P.O. Akola ग्रामीण
             </div>
             <div class="contact-card-body">
               <div class="contact-item">
@@ -785,7 +785,7 @@
   <div class="col-md-3">
     <div class="contact-card">
       <div class="contact-card-header">
-        <i class="fas fa-hospital" style="color: blue;"></i> अपोलो हॉस्पिटल, नाशिक
+        <i class="fas fa-hospital" style="color: blue;"></i> अपोलो हॉस्पिटल, Akola
       </div>
       <div class="contact-card-body">
         <div class="contact-item">
