--- a/impnumbers1.html
+++ b/impnumbers1.html
@@ -368,7 +368,7 @@
 
           <div class="col-md-6">
             <div class="contact-card">
-              <div class="contact-card-header">नाशिक रोड पोलिस स्टेशन</div>
+              <div class="contact-card-header">Akola रोड पोलिस स्टेशन</div>
               <div class="contact-card-body">
                 <div class="contact-item">
                   <span class="contact-name">फोन नंबर</span>
@@ -428,7 +428,7 @@
 
           <div class="col-md-6">
             <div class="contact-card">
-              <div class="contact-card-header">S.D.P.O. नाशिक ग्रामीण</div>
+              <div class="contact-card-header">S.D.P.O. Akola ग्रामीण</div>
               <div class="contact-card-body">
                 <div class="contact-item">
                   <span class="contact-name">फोन नंबर</span>
@@ -672,7 +672,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="contact-card">
-            <div class="contact-card-header">अपोलो हॉस्पिटल, नाशिक</div>
+            <div class="contact-card-header">अपोलो हॉस्पिटल, Akola</div>
             <div class="contact-card-body">
               <div class="contact-item">
                 <span class="contact-name">फोन नंबर</span>
