--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 विकास व पंचायतराज विभाग</a>
               <a href="https://nashik.gov.in/" target="_blank" class="btn btn-outline-primary btn-lg">जिल्हाधिकारी
                 कार्यालय</a>
-              <a href="https://nashikcitypolice.gov.in/" target="_blank" class="btn btn-outline-primary btn-lg">नाशिक
+              <a href="https://nashikcitypolice.gov.in/" target="_blank" class="btn btn-outline-primary btn-lg">Akola
                 पोलीस</a>
               <a href="https://aaplesarkar.mahaonline.gov.in/" target="_blank"
                 class="btn btn-outline-primary btn-lg">आपले सरकार सेवा</a>
