--- a/shabri_awas.html
+++ b/shabri_awas.html
@@ -316,7 +316,7 @@
             <div class="contact-info">
               <p>
                 <i class="fas fa-map-marker-alt"></i> ग्रामपंचायत वडेगाव,<br />
-                ता. सुरगाणा, जि. नाशिक,<br />
+                ता. Balapur, जि. Akola,<br />
                 पिन. ४२२२११
               </p>
               <p><i class="fas fa-envelope"></i>wadegaon.stegp@rediffmail.com
