--- a/villageinfo.html
+++ b/villageinfo.html
@@ -320,14 +320,14 @@
     <div class="card-body">
       <p><strong>ग्रामपंचायत नाव:</strong> वडेगाव</p>
       <p><strong> जिल्हा मुख्यालयापासून अंतर:</strong> ~90 किमी</p>
-      <p><strong> तालुक्यापासून अंतर:</strong> ~15-18 किमी (सुरगाणा)</p>
+      <p><strong> तालुक्यापासून अंतर:</strong> ~15-18 किमी (Balapur)</p>
       <p>
         <strong> जवळची गावे:</strong> पोहाळी, हतगड, मोहपाडा, सरड, उंबरपाडा,
         दिगर, घोडांबे, साजोळे
       </p>
-      <p><strong>जवळची शहरे:</strong> नाशिक, मालेगाव, कळवण, सटाणा</p>
-      <p><strong> तालुका:</strong> सुरगाणा</p>
-      <p><strong>जिल्हा:</strong> -</p>
+      <p><strong>जवळची शहरे:</strong> Akola, मालेगाव, कळवण, सटाणा</p>
+      <p><strong> तालुका:</strong> Balapur</p>
+      <p><strong>जिल्हा:</strong> Akola </p>
       <p><strong> पिन कोड:</strong> 444502</p>
       <p><strong> स्थान:</strong> 20.7625945,79.9024232</p>
       <p><strong> लोकसंख्या:</strong> 1312 (पुरुष: 660, महिला: 652)</p>
